--- a/sass/base/_font.scss
+++ b/sass/base/_font.scss
@@ -1,9 +1,9 @@
-%primary-title {
+%main-content-title {
   font-size: 30px;
   font-weight: 400;
 }
 
-%secondary-title {
+%footer-content-title {
   font-size: 24px;
   font-weight: 400;
 }
