--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,15 +1,14 @@
-// @use "base/reset";
-// @use "base/color" as *;
-// @use "base/font";
-// @use "utilities/breakpoint";
-// @use "utilities/background" as bg;
-// @use "utilities/tools";
+//vendor
+@use "vendors/swiper/swiper";
 
+//base setting
+@use "base/reset";
+
+//layout
 @use "layout/header";
 @use "layout/main";
 @use "layout/footer";
 
-// @use "../node_modules/bootstrap/scss/nav";
 * {
   // outline: 1px solid rosybrown;
 }
