--- a/sass/utilities/_background.scss
+++ b/sass/utilities/_background.scss
@@ -1,11 +1,9 @@
 @use "../base/color" as *;
 
-$bg_underlayer: url("../images/bg.jpg");
 $bg_section: url("../images/subbg.gif");
 
-@mixin section_bg($padding: 15px, $shadow-blur: 10px) {
-  padding: $padding;
+@mixin section_bg($shadow-blur: 10px) {
   background-image: $bg_section;
-  background-repeat: repeat-x repeat-y;
+  background-repeat: repeat;
   box-shadow: 0 0 $shadow-blur $gray-500;
 }
