--- a/sass/components/_dialogue.scss
+++ b/sass/components/_dialogue.scss
@@ -1,5 +1,49 @@
 @use "../base/color" as *;
+
 @use "../utilities/breakpoint";
+
+// 用clip-path做背景框，從父元素以drop-shadow做陰影
+.dialogue {
+  filter: drop-shadow(1px 1px 0 $gray-300) drop-shadow(-1px -1px 0 $gray-300);
+
+  p {
+    background: $gray-100;
+    // border: 1px solid $gray-300;
+
+    clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 10% 90%, 0% 100%);
+    padding: 15px 20px 40px;
+    // border-radius: 2px;
+
+    @include breakpoint.tablet {
+      clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 15% 90%, 0% 100%);
+    }
+  }
+}
+
+.testimonials {
+  .dialogue {
+    margin-bottom: 20px;
+  }
+
+  .custom_info {
+    display: flex;
+
+    div {
+      margin-left: 10px;
+    }
+
+    span {
+      display: block;
+      text-transform: capitalize;
+    }
+
+    a {
+      display: block;
+      color: $highlight-green;
+      font-style: italic;
+    }
+  }
+}
 
 // 對話框-長方形-p, 底下三角形為p的偽元素，用border做三角形，一個比較大並放在下層，視覺上作為border
 // .dialogue {
@@ -39,21 +83,3 @@
 //     }
 //   }
 // }
-
-// 用clip-path做背景框，從父元素以drop-shadow做陰影
-.dialogue {
-  filter: drop-shadow(1px 1px 0 $gray-300) drop-shadow(-1px -1px 0 $gray-300);
-
-  p {
-    background: $gray-100;
-    // border: 1px solid $gray-300;
-
-    clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 10% 90%, 0% 100%);
-    padding: 15px 20px 40px;
-    // border-radius: 2px;
-
-    @include breakpoint.tablet {
-      clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 15% 90%, 0% 100%);
-    }
-  }
-}
