--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,11 +1,13 @@
-@use "../base/color" as *;
 @use "../utilities/background" as bg;
 @use "../utilities/breakpoint";
-@use "../components/navbar-modify";
-@use "../components/search-modify";
+
+@use "../vendors/bootstrap/navbar";
+@use "../vendors/bootstrap/search";
+@use "../components/social-media";
 
 header {
   margin-top: 10px;
+  padding: 15px 15px;
 
   display: flex;
   flex-wrap: wrap;
@@ -36,47 +38,6 @@ header {
 
   @include breakpoint.tablet {
     justify-content: flex-end;
-  }
-}
-
-@mixin sprite($x, $y) {
-  display: inline-block;
-  background-image: url("../images/social.png");
-  background-repeat: no-repeat;
-  background-position: $x $y;
-  width: 27px;
-  height: 27px;
-
-  &:hover {
-    background-position: $x bottom;
-  }
-}
-
-.social_media li {
-  vertical-align: bottom;
-
-  & + li {
-    margin-left: 10px;
-  }
-
-  &:first-child {
-    @include sprite(0, 0);
-  }
-
-  &:nth-child(2) {
-    @include sprite(-37px, 0);
-  }
-
-  &:nth-child(3) {
-    @include sprite(-74px, 0);
-  }
-
-  &:nth-child(4) {
-    @include sprite(-111px, 0);
-  }
-
-  &:nth-child(5) {
-    @include sprite(-150px, 0);
   }
 }
 
