--- a/sass/utilities/_icon-unify.scss
+++ b/sass/utilities/_icon-unify.scss
@@ -11,7 +11,7 @@
 
   height: $diameter;
   width: $diameter;
-  border-radius: calc($diameter / 2);
+  border-radius: 999px;
   background: $bg;
   color: $color;
 
