--- a/sass/utilities/_position.scss
+++ b/sass/utilities/_position.scss
@@ -13,3 +13,10 @@
   right: $right;
   z-index: $zindex;
 }
+
+@mixin position-absolute-center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
