--- a/sass/components/_social-media.scss
+++ b/sass/components/_social-media.scss
@@ -19,30 +19,28 @@
       margin-left: 10px;
     }
 
-    &:first-child {
+    a {
+      display: block;
+    }
+
+    &:first-child a {
       @include sprite(0, 0);
     }
 
-    &:nth-child(2) {
+    &:nth-child(2) a {
       @include sprite(-37px, 0);
     }
 
-    &:nth-child(3) {
+    &:nth-child(3) a {
       @include sprite(-74px, 0);
     }
 
-    &:nth-child(4) {
+    &:nth-child(4) a {
       @include sprite(-111px, 0);
     }
 
-    &:nth-child(5) {
+    &:nth-child(5) a {
       @include sprite(-150px, 0);
     }
-  }
-
-  a {
-    display: block;
-    width: 27px;
-    height: 27px;
   }
 }
