--- a/sass/components/_news-card.scss
+++ b/sass/components/_news-card.scss
@@ -6,10 +6,23 @@
 .news_card {
   display: flex;
 
-  .news_card_body {
+  &_image {
+    flex-basis: 45%;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+
+  &_body {
+    flex-basis: 50%;
     margin-left: 15px;
   }
+
   .news_date {
+    display: inline-block;
     padding: 5px;
     color: white;
     background: $highlight-green;
