--- a/sass/components/_service-card.scss
+++ b/sass/components/_service-card.scss
@@ -24,7 +24,17 @@
   }
 
   .service_title {
-    font-size: 18px;
+    font-size: 20px;
+  }
+
+  .service_icon_wrapper {
+    margin: 0 auto;
+    height: 60px;
+
+    img {
+      height: 100%;
+      object-fit: cover;
+    }
   }
 
   a {
