--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -1,6 +1,10 @@
+@use "../base/color" as *;
+
 @use "../utilities/background" as bg;
 @use "../utilities/breakpoint";
 
+@use "../vendors/bootstrap/navbar";
+@use "../vendors/bootstrap/search";
 @use "../vendors/bootstrap/carousel";
 @use "../vendors/swiper/navigation";
 
@@ -9,19 +13,22 @@
 @use "../components/news-card";
 @use "../components/more-link";
 
+$unify-horizontall-padding-s: 20px;
+$unify-horizontall-padding-ml: 40px;
+
 main {
   @include bg.section_bg;
 }
 
 .service {
-  padding: 0 40px;
+  padding: 0 $unify-horizontall-padding-s;
 
-  .row {
-    @include breakpoint.desktop {
-      position: relative;
-      z-index: 999;
-      transform: translateY(-30px);
-    }
+  @include breakpoint.desktop {
+    padding: 0 $unify-horizontall-padding-ml;
+
+    position: relative;
+    z-index: 999;
+    transform: translateY(-30px);
   }
 
   .row > div {
@@ -33,7 +40,11 @@ main {
 }
 
 .introduction_blocks {
-  padding: 20px 40px;
+  padding: 20px $unify-horizontall-padding-s;
+
+  @include breakpoint.desktop {
+    padding: 20px $unify-horizontall-padding-ml;
+  }
 
   .row {
     > div + div {
@@ -56,10 +67,6 @@ main {
   .block_title {
     @extend %main-content-title;
     margin-bottom: 20px;
-
-    @include breakpoint.bgScreen {
-      width: auto;
-    }
   }
 }
 
@@ -67,39 +74,11 @@ main {
   p {
     margin-top: 20px;
   }
-
-  .welcome_body {
-    display: flex;
-    flex-direction: column;
-
-    @include breakpoint.tablet {
-      flex-direction: row;
-      flex-wrap: wrap;
-      justify-content: space-between;
-
-      div {
-        flex: 1 0 60%;
-      }
-
-      p {
-        flex: 1 0 40%;
-        margin-top: 0;
-        padding: 25px;
-      }
-    }
-
-    @include breakpoint.desktop {
-      flex-direction: column;
-
-      div {
-        flex: 1 0 auto;
-      }
-
-      p {
-        flex: 1 0 auto;
-        margin-top: 20px;
-        padding: 0;
-      }
+  .welcome_image_wrapper {
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
   }
 }
@@ -134,8 +113,22 @@ main {
   }
 }
 
+.work_gallery::before {
+  content: "";
+  display: block;
+  border: 1px solid $gray-200;
+
+  position: relative;
+  bottom: 20px;
+}
+
 .work_gallery {
-  padding: 20px 40px 40px;
+  padding: 20px $unify-horizontall-padding-s 20px;
+
+  @include breakpoint.desktop {
+    padding: 20px $unify-horizontall-padding-ml 20px;
+  }
+
   .gallery_title {
     @extend %main-content-title;
   }
