--- a/sass/base/_font.scss
+++ b/sass/base/_font.scss
@@ -1,9 +1,16 @@
-%main-content-title {
+h1,
+h2,
+h3,
+h4 {
+  text-transform: uppercase;
+}
+
+%primary-title {
   font-size: 30px;
   font-weight: 400;
 }
 
-%footer-content-title {
+%secondary-title {
   font-size: 24px;
   font-weight: 400;
 }
