--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -33,6 +33,7 @@ main {
 
   .row > div {
     margin-top: 10px;
+
     @include breakpoint.desktop {
       margin-top: 0;
     }
@@ -65,7 +66,7 @@ main {
   }
 
   .introduction_content_title {
-    @extend %primary-title;
+    @extend .primary_title;
     margin-bottom: 20px;
   }
 }
@@ -111,14 +112,16 @@ main {
 }
 
 .work_gallery {
-  padding: 20px spacing.$horizontal-padding-s 20px;
+  $gallery_top_space: 20px;
+
+  padding: $gallery_top_space spacing.$horizontal-padding-s 20px;
 
   @include breakpoint.desktop {
-    padding: 20px spacing.$horizontal-padding-ml 20px;
+    padding: $gallery_top_space spacing.$horizontal-padding-ml 20px;
   }
 
   .gallery_title {
-    @extend %primary-title;
+    @extend .primary_title;
   }
 
   &::before {
@@ -127,6 +130,6 @@ main {
     border: 1px solid $gray-200;
 
     position: relative;
-    bottom: 20px;
+    bottom: $gallery_top_space;
   }
 }
