--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -6,6 +6,20 @@
 @use "../vendors/bootstrap/search";
 
 .navigation {
+  display: flex;
+
+  @include breakpoint.tablet {
+    flex-wrap: wrap;
+  }
+
+  .modify_navbar {
+    flex: 1 0 70%;
+  }
+
+  .search {
+    flex: 1 0 20%;
+  }
+
   margin-top: spacing.$sections-margin-s;
 
   @include breakpoint.tablet {
